--- a/.travis.yml
+++ b/.travis.yml
@@ -61,3 +61,11 @@ scripts: |-
   cd build 
   cmake -DDEBUG=0 -DUSE_LIBCURL=1 .. 
   make -j2
+  
+deploy:
+  provider: releases
+  api_key: "GITHUB OAUTH TOKEN"
+  file: "FILE TO UPLOAD"
+  skip_cleanup: true
+  on:
+    tags: true
